Fixed alignment

--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -20,18 +20,17 @@
     width: 273px;
     height: 100px;
 }
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
 /*Form*/
 .lg-form {
-
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+    height: 600px;
     width: 500px;
-    height: 550px;
     margin: auto;
-
     text-align: center!important;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     border-radius: 15px;
